# ClipboardImage

./: .gitignore  README.md  pyproject.toml
ClipboardImage/: __main__.py  api.py  run.py  views.py
ClipboardImage/static/: index.css  index.js
ClipboardImage/templates/: index.html
user/: save_image.py
